--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<div class="moon_container horizontal" geo_pk="25" place="Beijing, Beijing, China"> </div> <h2 id="moon_astro"> Explore your free birth chart with the <a target="_blank" href="https://astro-charts.com/tools/new/birth-chart/"> birth chart calculator </a>. </h2> <script type="text/javascript" src="https://astro-charts.com/client/common/widget/js/widget-moon.min.js"></script>
+<div class="moon_container horizontal" geo_pk="25" place="Beijing, Beijing, China"> </div> 
+<script type="text/javascript" src="https://astro-charts.com/client/common/widget/js/widget-moon.min.js"></script>
